test/src/e2e_vm_tests/test_programs/should_pass/test_abis/storage_in_library_abi/src/main.sw
library storage_in_library_abi;

abi StorageInLibrary {
    #[storage(read, write)] 
    fn call_update_library_storage();

    #[storage(read)] 
    fn call_get_library_storage() -> u64;
}
